--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> Deploy to azure using Github</title>
+    <title> This is 2nd web app</title>
     <h1>Deploy Web Apps to azure using Github</h1>
   </head>
   
