--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title> This is 2nd web app</title>
-    <h1>Deploy Web Apps to azure using Github</h1>
+    <h1> This Web App 2 - azure using Github</h1>
   </head>
   
   <body>
