--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-2
+
+<html>
+  <head>
+    <title> This is 2nd web app</title>
+    <h1> This Web App 2 - azure using Github</h1>
+  </head>
+  
+  <body>
+    <h2>Have Zeal for being Azure Expert</h2>
+    <img src ="https://azurecomcdn.azureedge.net/cvt-3410f80cf884c7591e75fea0fe1076e240e99d0744c516c664b75c36f0df9a10/images/page/services/azure-sentinel/office-365.png">
+  </body>
+  
+</html>
